--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "sort-by": "^1.2.0",
     "swiper": "^9.4.1"
