--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@headlessui/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
