--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "swiper": "^9.4.1"
   },
